@@ -40,6 +40,7 @@ static int _ignore_suspended_devices = 0;
 static int _error_message_produced = 0;
 static unsigned _is_static = 0;
 static int _udev_checking = 1;
+static char _sysfs_dir_path[PATH_MAX] = "";
 
 void init_verbose(int level)
 {
@@ -125,6 +126,12 @@ void set_cmd_name(const char *cmd)
 {
 	strncpy(_cmd_name, cmd, sizeof(_cmd_name));
 	_cmd_name[sizeof(_cmd_name) - 1] = '\0';
+}
+
+void set_sysfs_dir_path(const char *path)
+{
+	strncpy(_sysfs_dir_path, path, sizeof(_sysfs_dir_path));
+	_sysfs_dir_path[sizeof(_sysfs_dir_path) - 1] = '\0';
 }
 
 const char *log_command_name()
@@ -223,4 +230,9 @@ unsigned is_static(void)
 int udev_checking(void)
 {
 	return _udev_checking;
+}
+
+const char *sysfs_dir_path()
+{
+	return _sysfs_dir_path;
 }
